tests/parse/error_ituple4.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_ituple() {
  ituple[2] it = {7, 8};  // rank must be enclosed in "<" & ">"
}

// CHECK: error: syntax error, unexpected [, expecting < or IDENTIFIER
// CHECK-NOT: error:

